--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5001
 NODE_ENV=development
-DATABASE_URL=TEST
+DATABASE_URL=postgresql://neondb_owner:npg_ekVfCJ7lriG1@ep-young-night-a81icmys-pooler.eastus2.azure.neon.tech/neondb?sslmode=require
