Adding Clerk Auth URL

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT=5001
 NODE_ENV=development
 DATABASE_URL=postgresql://neondb_owner:npg_ekVfCJ7lriG1@ep-young-night-a81icmys-pooler.eastus2.azure.neon.tech/neondb?sslmode=require
+EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_b25lLXRyb2xsLTM3LmNsZXJrLmFjY291bnRzLmRldiQ
